...
    // 存储当前测试题的用户答案
    _userAnswers[_currentIndex] = _selectedAnswer.value;

    setState(() {
      if (isCorrect) {
        _correctCount++; // 正确数量加1
        // 回答正确，将单词状态更新为"模糊"（熟悉）
        currentWord.updateStatus(StudyStatus.familiar);
      } else {
        _wrongCount++; // 错误数量加1
        // 回答错误，如果单词状态不是"新单词"，则将其状态更新为"学习中"（不认识）
        if (currentWord.status != StudyStatus.newWord) {
          currentWord.updateStatus(StudyStatus.learning);
...
              child: Wrap(
                spacing: 30, // 水平间距
                runSpacing: 20, // 垂直间距
                alignment: WrapAlignment.center, // 居中对齐
                children: [
                  // 选择题按钮
                  _testModeButton('选择题', QuizMode.multipleChoice),
                  // 填空题按钮
                  _testModeButton('填空题', QuizMode.blankFill),
                ],
              ),
            ),

            // 根据是否显示结果，切换显示测试屏幕或结果屏幕
            _showResult ? _buildResultScreen() : _buildTestScreen(),
...
